Corrected the Submit and Login Button margins to be aligned. Corrected the shopping cart logo to be aligned

--- a/Core2Base/wwwroot/css/site.css
+++ b/Core2Base/wwwroot/css/site.css
@@ -506,7 +506,7 @@ tr td:nth-child(6) {
         justify-content: flex-end;
         flex-direction: row;
         flex: 1 1 auto;
-        margin-left: 28.8%;
+        margin-left: 27.8%;
         font-size: 21px;
     }
 
@@ -563,7 +563,7 @@ tr td:nth-child(6) {
         justify-content: flex-end;
         flex-direction: row;
         flex: 1 1 auto;
-        margin-left: 27.9%;
+        margin-left: 27%;
         font-size: 21px;
     }
 
